# event-source-banking

./: Cargo.toml  LICENSE  README.md  docker-compose.yml  justfile
src/: account.rs  event_bus_kafka.rs  event_store_sqlite.rs  main.rs  traits.rs
src/account/: account_handler.rs  account_service.rs  commands.rs  events.rs  repositories.rs
src/account/commands/: deposit_command.rs  open_account_command.rs  withdraw_command.rs
src/account/events/: account_opened_event.rs  deposit_event.rs  withdraw_event.rs
src/account/repositories/: account_repository_sqlite.rs
src/traits/: aggregate.rs  command.rs  event.rs  event_bus.rs  event_store.rs  repository.rs
