[package]
name = "bankingv2"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = "0.37.0"
rusqlite = { version = "0.35.0", feature = ["serde"] }
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ulid = { version = "1.2.1", features = ["serde"] }
