[package]
name = "bankingv2"
version = "0.1.0"
edition = "2024"

[dependencies]
r2d2 = "0.8.10"
r2d2_sqlite = "0.28.0"
rdkafka = "0.37.0"
rusqlite = { version = "0.35.0" }
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
ulid = { version = "1.2.1", features = ["serde"] }
tracing = "0.1.41"

[lints.clippy]
# Sapphire preference lints
wildcard_imports = { level = "allow", priority = 2 }
future_not_send = { level = "allow", priority = 2 }
significant-drop-tightening = { level = "allow", priority = 2 }
match_bool = { level = "allow", priority = 2 }

# Best practices, these will fail during the pipeline so fix before merging
uninlined_format_args = { level = "warn", priority = 2 }
module_name_repetitions = { level = "allow", priority = 2 }

# Lint groups
correctness = { level = "deny", priority = 1 }
perf = { level = "warn", priority = 1 }
style = { level = "warn", priority = 1 }
complexity = { level = "warn", priority = 1 }
suspicious = { level = "warn", priority = 1 }

# Allow nursery & pedantic lints
pedantic = { level = "allow", priority = 3 }
nursery = { level = "allow", priority = 3 }
